fix/bug-fixes-and-refactor-config-upload-api
